--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tabler/icons-react": "^3.30.0",
     "@tanstack/react-query": "^5.66.9",
     "@tanstack/react-query-next-experimental": "^5.66.9",
+    "anchor-bankrun": "^0.5.0",
     "daisyui": "^4.12.24",
     "jotai": "^2.12.1",
     "next": "14.2.24",
@@ -41,7 +42,7 @@
     "jest": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "ts-jest": "^29.2.6",
+    "ts-jest": "^29.3.0",
     "typescript": "5.4.5"
   }
 }
