--- a/.github/workflows/test-anchor.yml
+++ b/.github/workflows/test-anchor.yml
@@ -1,61 +1,67 @@
 name: Test and Build Anchor
-
 on:
   pull_request:
   push:
     branches: ['main']
-
 jobs:
   test-and-build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
+      
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 9
           run_install: false
-
-      - name: Install Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'pnpm'
-
+      
+      - name: Debug environment
+        run: |
+          node --version
+          npm --version
+          which node
+      
       - name: Debug working directory
         run: ls -la
-
+      
       - name: Ensure `pnpm-lock.yaml` exists
         run: |
           if [ ! -f pnpm-lock.yaml ]; then
             echo "pnpm-lock.yaml is missing! Generating a new one..."
             pnpm install --lockfile-only
+            git config --global user.email "github-actions@github.com"
+            git config --global user.name "GitHub Actions"
             git add pnpm-lock.yaml
             git commit -m "Auto-generate missing pnpm-lock.yaml"
             git push
           fi
-
+      
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
-
+      
       - uses: metadaoproject/setup-anchor@v2
         with:
           anchor-version: '0.30.1'
-
+      
       - name: Generate new keypair
         run: solana-keygen new --no-bip39-passphrase
-
+      
       - name: Set solana target cluster to local
         run: solana config set --url http://localhost:8899
-
+      
       - name: Check solana config
         run: solana config get
-
-      - run: pnpm run anchor build
+      
+      - name: Build anchor project
+        run: pnpm run anchor build
         shell: bash
-
-      - run: pnpm run anchor test
+      
+      - name: Test anchor project
+        run: pnpm run anchor test
         shell: bash
