--- a/.github/workflows/test-anchor.yml
+++ b/.github/workflows/test-anchor.yml
@@ -6,41 +6,57 @@ on:
 jobs:
   test-and-build:
     runs-on: ubuntu-latest
+    container:
+      image: node:20-slim
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       
-      - name: Install Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      
-      - name: Check Node version after setup
+      - name: Install system dependencies
         run: |
-          echo "Node path: $(which node)"
-          echo "Node version: $(node --version)"
+          apt-get update
+          apt-get install -y curl wget git build-essential pkg-config libssl-dev libudev-dev python3
+      
+      - name: Verify Node.js
+        run: |
+          node --version
       
       - name: Install pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9
-          run_install: false
+        run: |
+          npm install -g pnpm@9
+          pnpm --version
       
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       
-      - uses: metadaoproject/setup-anchor@v2
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
         with:
-          anchor-version: '0.30.1'
+          toolchain: stable
+          profile: minimal
+          override: true
       
-      - name: Generate new keypair
-        run: solana-keygen new --no-bip39-passphrase
+      - name: Install Solana CLI
+        run: |
+          sh -c "$(curl -sSfL https://release.solana.com/v1.17.0/install)"
+          export PATH="/root/.local/share/solana/install/active_release/bin:$PATH"
+          echo "PATH=$PATH" >> $GITHUB_ENV
+          solana --version
       
-      - name: Set solana target cluster to local
-        run: solana config set --url http://localhost:8899
+      - name: Install Anchor CLI
+        run: |
+          cargo install --git https://github.com/coral-xyz/anchor anchor-cli --locked --force
+          anchor --version
       
-      - name: Build anchor project
-        run: pnpm run anchor build
+      - name: Generate Solana keypair
+        run: |
+          mkdir -p ~/.config/solana
+          solana-keygen new --no-bip39-passphrase --force
       
-      - name: Test anchor project
-        run: pnpm run anchor test
+      - name: Build Anchor project
+        run: |
+          pnpm run anchor build
+      
+      - name: Test Anchor project
+        run: |
+          pnpm run anchor test
