--- a/.github/workflows/test-anchor.yml
+++ b/.github/workflows/test-anchor.yml
@@ -1,42 +1,49 @@
 name: Test and Build Anchor
+
 on:
   pull_request:
   push:
     branches: ['main']
+
 jobs:
   test-and-build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
+
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          components: rustfmt, clippy
+
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '16.x'
-      
+
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 7
           run_install: false
-      
+
       - name: Install dependencies
         run: pnpm install
-      
+
       - name: Setup Solana
         uses: metadaoproject/setup-anchor@v2
         with:
           anchor-version: '0.30.1'
-      
+
       - name: Generate new keypair
         run: solana-keygen new --no-bip39-passphrase
-      
+
       - name: Set solana target cluster to local
         run: solana config set --url http://localhost:8899
-      
+
       - name: Build Anchor project
         run: pnpm run anchor-build
-      
+
       - name: Test Anchor project
         run: pnpm run anchor-test
